<?xml version="1.0" encoding="utf-8"?>

<ScrollView
android:layout_height="match_parent"
android:layout_width="match_parent"
xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_present"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.touseefelahi.nafa.presentActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/textboxMonthlyFunds"
        android:textSize="14sp"
        android:layout_below="@+id/labelNafaMonthly"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/labelFutureRateOfReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textboxMonthlyFunds"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/labelDesiredReturnRate"
        android:textSize="18sp"
        android:textColor="@color/labelColor"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <SeekBar
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="25"
        android:progress="1"
        android:id="@+id/seekBar2"
        android:layout_below="@+id/labelDesiredReturnRate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/buttonCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonCalculate"
        android:layout_below="@+id/seekBar2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/labelPaymentFrequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelFuturePaymentFrequency"
        android:textSize="18sp"
        android:textColor="@color/labelColor"
        android:layout_below="@+id/labelFutureInfo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/labelResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/labelResult"
        android:textColor="@color/labelColor"
        android:textSize="18sp"
        android:layout_below="@+id/buttonCalculate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/textboxFutureDesiredAmount"
        android:layout_below="@+id/labelDesiredFutureAmount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textboxCurrentSavings"
        android:layout_alignEnd="@+id/textboxCurrentSavings" />

    <TextView
        android:id="@+id/labelTitle"
        android:text="@string/labelPresentTitle"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@color/colorWhite"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/labelDesiredFutureAmount"
        android:layout_alignEnd="@+id/labelDesiredFutureAmount"
        android:background="@color/labelColor" />

    <SeekBar
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="50"
        android:progress="1"
        android:id="@+id/seekBar"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/labelFutureCommonGoals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/labelCommonGoals"
        android:textColor="@color/labelColor"
        android:textSize="18sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/labelFutureInfo"
        android:text="@string/labelFutureInfo"

        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:textColor="@color/labelColor"
        android:layout_below="@+id/labelCommonGoals"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/radioButtonPaymentFreq"
        android:layout_below="@+id/labelPaymentFrequency"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Monthly"

            android:textSize="14sp"
            android:id="@+id/radioButtonMonthly" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Quarterly"
            android:id="@+id/radioButtonQurterly"
            android:textSize="14sp"

            android:layout_weight="1" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Half Yearly"
            android:id="@+id/radioButtonHalfYearly"
            android:textSize="14sp"
            android:layout_weight="1" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Yearly"
            android:id="@+id/radioButtonYearly"
            android:textSize="14sp"

            android:layout_weight="1" />

    </RadioGroup>

    <TextView
        android:text="@string/labelFutureYears"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="18sp"
        android:textColor="@color/labelColor"
        android:layout_below="@+id/textboxFutureDesiredAmount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/labelFutureMonthly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/labelNafaMonthly"
        android:textSize="18sp"
        android:textColor="@color/labelColor"
        android:layout_below="@+id/seekBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/labelPeriodicDesiredFutureAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/labelDesiredFutureAmount"
        android:textColor="@color/labelColor"
        android:textSize="18sp"
        android:layout_below="@+id/radioButtonPaymentFreq" />


</RelativeLayout>

</ScrollView>
